# NextEngine

./: .gitignore  .gitmodules  CMakeLists.txt  NextEngine.sln  README.md  Report20190729-1344.diagsession  Report20190803-0937.diagsession  RudeBuild_NextEngine.sln  imgui.ini  premake5.lua  premake_extension.lua
NextCore/: CMakeLists.txt  NextCore.vcxproj  NextCore.vcxproj.filters
NextCore/include/core/: algorithm.h  atomic.h  container.h  context.h  core.h  event.h  profiler.h  reflection.h  serializer.h  time.h
NextCore/src/core/: CMakeLists.txt  profiler.cpp  reflection.cpp  serializer.cpp  time.cpp
NextEngine/: CMakeLists.txt  NextEngine.cpp  NextEngine.vcxproj  NextEngine.vcxproj.filters  RudeBuild_NextEngine.vcxproj  RudeBuild_NextEngine.vcxproj.filters  diffUtil.h  dllmain.cpp  fbuild.bff  imgui.ini  stdafx.cpp  stdafx.h  string_buffer.h  string_id.h  terrain.cpp  type_info.refl
NextEngine/data/editor/: camera.fbx  dir_light.afdesign  grass.fbx  terrain_height.afdesign
NextEngine/data/engine/: .Tropical_Beach_3k.hdr.icloud  plane.fbx  subdivided_plane16.fbx  subdivided_plane32.fbx  subdivided_plane8.fbx
NextEngine/data/shaders/: FragmentShader.frag  blur.frag  brdf_convultion.frag  composite.frag  debugTexture.frag  depth.frag  eToCubemap.frag  gizmo.frag  grass.vert  icon.frag  icon.vert  imgui.ini  imgui_shader.frag  imgui_shader.vert  irradiance.vert  outline.frag  outline.vert  pbr.frag  pbr.vert  pbr_helper.glsl  picking.frag  picking.vert  preamble.glsl  prefilter.frag  preview.frag  screenspace.vert  shader.frag  shadow.glsl  skybox.vert  splat.frag  temporal.frag  temporal.vert  terrain.frag  terrain.vert  tree.frag  tree.vert  unselectable.frag  vert_helper.glsl  volumetric.frag  volumetric_upsample.frag
NextEngine/include/: component_ids.h  next_engine.h
NextEngine/include/components/: camera.h  flyover.h  grass.h  lights.h  skybox.h  terrain.h  transform.h
NextEngine/include/core/: HandleManager.h  allocator.h  core.h  eventDispatcher.h  game_time.h  handle.h  input.h  profiler.h  profiling.h  reflection.h  reflection2.h  resource.h  resourceManager.h  serializer.h  sort.h  string_buffer.h  string_view.h  temporary.h  time.h  types.h  vector.h  vfs.h
NextEngine/include/ecs/: component_ids.h  ecs.h  ecs20.h  flags.h  id.h  layermask.h  new_ecs.h  system.h
NextEngine/include/editor/: assetTab.h  custom_inspect.h  diffUtil.h  displayComponents.h  editor.h  gizmo.h  grass.h  lister.h  picking.h  shaderGraph.h  terrain.h
NextEngine/include/engine/: application.h  core.h  engine.h  handle.h  input.h  types.h  vfs.h
NextEngine/include/graphics/: buffer.h  culling.h  device.h  draw.h  frameBuffer.h  ibl.h  (+19 more)
NextEngine/src/: CMakeLists.txt  generated.cpp  generated.h  refl_filepaths.refl
NextEngineEditor/: CMakeLists.txt  NextEngineEditor.cpp  NextEngineEditor.vcxproj  NextEngineEditor.vcxproj.filters  RudeBuild_NextEngineEditor.vcxproj  RudeBuild_NextEngineEditor.vcxproj.filters  cpp.hint  stdafx.cpp  stdafx.h  type_info.refl
NextEngineEditor/include/: assetTab.h  component_ids.h  custom_inspect.h  diffUtil.h  displayComponents.h  editor.h  editor_viewport.h  generated.h  gizmo.h  grass.h  lister.h  objectGizmo.h  picking.h  shaderGraph.h  terrain.h  visualize_physics.h  visualize_profiler.h
NextEngineEditor/src/: CMakeLists.txt  assetTab.cpp  custom_inspect.cpp  diffUtil.cpp  displayComponents.cpp  editor.cpp  generated.cpp  generated.h  gizmo.cpp  grass_placement.cpp  lister.cpp  objectGizmo.cpp  picking.cpp  shaderGraph.cpp  shaderGraphNodes.cpp  terrain.cpp  visualize_physics.cpp  visualize_profiler.cpp
NextUI/: CMakeLists.txt  NextUI.vcxproj  NextUI.vcxproj.filters
NextUI/NextUI.xcodeproj/: project.pbxproj
NextUI/src/: CMakeLists.txt
(+1138 files in other folders)
